--- a/container-exporter-production.yml
+++ b/container-exporter-production.yml
@@ -2,7 +2,9 @@ version: !!str 3.7
 
 services:
   cxp:
-    image: devopsteen/cxp:alpine
+    build: 
+      context: .
+      dockerfile: ./Dockerfile
     container_name: container-exporter
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
