--- a/container-exporter.yml
+++ b/container-exporter.yml
@@ -2,7 +2,7 @@ version: !!str 3.7
 
 services:
   cxp:
-    image: devopsteen/cxp:alpine
+    image: devopsteen/cxp:latest
     container_name: container-exporter
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
