--- a/container-exporter.yml
+++ b/container-exporter.yml
@@ -2,9 +2,10 @@ version: !!str 3.7
 
 services:
   cxp:
-    image: devopsteen/cxp:latest
+    image: devopsteen/cxp:latest # use alpine tag for a lighter image
     container_name: container-exporter
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - 8000:8000
+    restart: always
