--- a/container-exporter-local.yml
+++ b/container-exporter-local.yml
@@ -7,7 +7,9 @@ services:
       dockerfile: ./Dockerfile
     container_name: container-exporter
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+      - /var/run/docker.sock:/var/run/docker.sock 
+    environment:
+      CONTAINER_EXPORTER_PORT: ${CONTAINER_EXPORTER_PORT}
     ports:
-      - 8000:8000
+      - 8000:5000
     restart: always
