--- a/container-exporter.yml
+++ b/container-exporter.yml
@@ -8,4 +8,6 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - 8000:8000
+    environment:
+      CONTAINER_EXPORTER_PORT: ${CONTAINER_EXPORTER_PORT}
     restart: always
