enhanced dockerignore file for size reduction

--- a/.dockerignore
+++ b/.dockerignore
@@ -7,6 +7,8 @@ Dockerfile
 docs/
 README.md
 LICENCE
+CHANGELOG.md
+*.yml
 # Created by https://www.toptal.com/developers/gitignore/api/flask,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=flask,python
 
@@ -259,3 +261,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 
 # End of https://www.toptal.com/developers/gitignore/api/flask,python
+
+dashboards/
+
+capture/
+
+extra/
