--- a/deploy/container-exporter-local.yml
+++ b/deploy/container-exporter-local.yml
@@ -4,7 +4,7 @@ services:
   cxp:
     build: 
       context: .
-      dockerfile: ./Dockerfile
+      dockerfile: ../Dockerfile
     container_name: container-exporter
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock 
