--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 aiodocker==0.21.0
-aiohttp>=3.9.0
+aiohttp==3.9.5
 aiosignal==1.3.1
+ansible==9.6.0
+ansible-core==2.16.7
 async-timeout==4.0.3
 attrs==23.1.0
 blinker==1.6.2
 certifi==2023.7.22
+cffi==1.16.0
 charset-normalizer==3.2.0
 click==8.1.7
+cryptography==42.0.7
 docker==6.1.3
 Flask==2.3.3
 frozenlist==1.4.0
@@ -14,15 +18,18 @@ gunicorn==22.0.0
 idna==3.7
 importlib-metadata==6.8.0
 itsdangerous==2.1.2
-jinja2>=3.1.3
+Jinja2==3.1.4
 MarkupSafe==2.1.3
 multidict==6.0.4
 packaging==23.1
 prometheus-client==0.17.1
+pycparser==2.22
+PyYAML==6.0.1
 requests==2.31.0
+resolvelib==1.0.1
 typing_extensions==4.8.0
-urllib3>=2.0.7
+urllib3==2.2.1
 websocket-client==1.6.2
-werkzeug>=2.3.8
+Werkzeug==3.0.3
 yarl==1.9.2
 zipp==3.16.2
