--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -35,6 +35,9 @@ jobs:
   probe:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
   
@@ -43,7 +46,7 @@ jobs:
       
       - name: deploy
         run: |
-          docker compose -f container-exporter-local.yml up --build
+          docker compose -f ./container-exporter-local.yml up --build
         
       - name: check for health
         run: |
