--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -48,9 +48,6 @@ jobs:
         run: |
           docker compose -f ./container-exporter-local.yml up --build -d
         
-      - name: check for health
+      - name: check for metrics and overall api health
         run: |
-          sleep 5
-          docker ps
-          bash -c "</dev/tcp/localhost/8000" || exit 1
           bash ./healthcheck.sh
