--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,8 @@ permissions:
 
 env:
   ghcr_repo_addr: ghcr.io/shayan-ghani/container-exporter:latest
+  docker_hub_addr: shayanghani/container-exporter:latest
+  docker_hub_user: shayanghani
   
 jobs:
   
@@ -38,10 +40,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
 
-      - name: Login to GHCR
-        run: |
-         echo ${{ secrets.GHCR_TOKEN }} | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ env.docker_hub_user }}
+          password: ${{ secrets.DOCKER_TOKEN }}
 
+      - name: Login to GHCR
+        uses: docker/login-action@v3
+        with:
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GHCR_TOKEN }} 
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -54,8 +63,33 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{env.ghcr_repo_addr}}
+          tags: |
+            ${{env.ghcr_repo_addr}}
+            ${{env.docker_repo_addr}}
+
+
+
+  probe:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
   
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
+      - name: deploy
+        run: |
+          docker compose -f ./container-exporter-local.yml up --build -d
+        
+      - name: probe metrics api and print out metrics
+        run: |
+          bash ./scripts/healthcheck-ci.sh
+
+
   # test:
     
   # ## pytest to be implemented here ...
@@ -63,7 +97,7 @@ jobs:
   release:
     if: github.event_name != 'pull_request'
     runs-on: ubuntu-latest
-    needs: docker-build
+    needs: probe
     steps:
       - 
         name: Bump version and push tag
