--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,6 +72,7 @@ jobs:
 
   probe:
     runs-on: ubuntu-latest
+    needs: docker-build
     steps:
       - name: Checkout
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
@@ -84,7 +85,7 @@ jobs:
       
       - name: deploy
         run: |
-          docker compose -f ./container-exporter-local.yml up --build -d
+          docker compose -f ./container-exporter.yml up --build -d
         
       - name: probe metrics api and print out metrics
         run: |
