--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,7 +70,7 @@ jobs:
 
 
 
-  probe:
+  healthcheck:
     runs-on: ubuntu-latest
     needs: docker-build
     steps:
@@ -83,11 +83,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       
-      - name: deploy
+      - name: deploy from ghcr
         run: |
-          docker compose -f ./container-exporter.yml up --build -d
+          IMAGE=${{env.ghcr_repo_addr}} docker compose -f ./container-exporter.yml up -d
         
-      - name: probe metrics api and print out metrics
+      - name: check metrics api and print out metrics
         run: |
           bash ./scripts/healthcheck-ci.sh
 
@@ -97,9 +97,9 @@ jobs:
   # ## pytest to be implemented here ...
           
   release:
-    if: github.event_name != 'pull_request'
+    if: github.event_name != 'pull_request' && github.ref_name == 'master'
     runs-on: ubuntu-latest
-    needs: probe
+    needs: healthcheck
     steps:
       - 
         name: Bump version and push tag
