--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,11 +14,20 @@ on:
       branches:
         - master
 
+permissions:
+  contents: write
+  pull-requests: read
+
 env:
   ghcr_repo_addr: ghcr.io/shayan-ghani/container-exporter:latest
-  
+  docker_repo_addr: shayanghani/container-exporter
+  docker_hub_user: shayanghani
+
 jobs:
   release:
+    outputs:
+      image_tag: ${{ steps.bump.outputs.new_tag }}
+
     if: github.event_name != 'pull_request' && github.ref_name == 'master'
     runs-on: ubuntu-latest
     steps:
@@ -36,3 +45,32 @@ jobs:
         with:
           body: ${{ steps.bump.outputs.changelog }}
           tag_name: ${{ steps.bump.outputs.new_tag }}
+
+  docker-push:
+    runs-on: ubuntu-latest
+    needs: release
+    steps:
+      - name: Checkout
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ env.docker_hub_user }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+  
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+  
+      - name: Build and Push to Dockerhub
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: |
+            "${{env.docker_repo_addr}}:${{ needs.release.outputs.image_tag }}"
+            "${{env.docker_repo_addr}}:latest"
+          
