--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ on:
 
 
 env:
-  ghcr_repo_addr: ghcr.io/shayan-ghani/container-exporter:${{github.ref_name}}-${{github.run_id}}
+  ghcr_repo_addr: ghcr.io/shayan-ghani/container-exporter:pr-${{github.run_id}}
   
 jobs:
   
