added md files and workflows to paths_ignore

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,7 @@ on:
         - 'scripts/**'
         - '.gitignore'
         - 'LICENSE'
+        - '.github/workflows/**'
       branches:
         - master
 
