added docker buildx to avoid empty metrics

--- a/.github/workflows/deps_security.yml
+++ b/.github/workflows/deps_security.yml
@@ -32,7 +32,10 @@ jobs:
           pip install pip-audit
           pip-audit || true  
 
-      - name: Deploy cxp
+      - name: Set up Docker Buildx To Have A Dummy Container
+        uses: docker/setup-buildx-action@v3
+        
+      - name: Deploy CXP
         run: |
           bash ./start.sh &
           sleep 5
