--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       
-      - name: deploy
+      - name: build and deploy
         run: |
           docker compose -f ./container-exporter-local.yml up --build -d
         
