--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,28 @@
 aiodocker==0.21.0
-aiohttp>=3.9.0
-aiosignal==1.3.1
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.4
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.9.0
 async-timeout==4.0.3
 attrs==23.1.0
-blinker==1.6.2
 certifi==2024.7.4
 charset-normalizer==3.2.0
-click==8.1.7
-docker==6.1.3
-Flask==2.3.3
-frozenlist==1.4.0
-gunicorn==23.0.0
+click==8.2.1
+exceptiongroup==1.3.0
+fastapi==0.115.12
+frozenlist==1.6.0
+h11==0.16.0
 idna==3.7
-importlib-metadata==6.8.0
-itsdangerous==2.1.2
-jinja2>=3.1.3
-MarkupSafe==2.1.3
-multidict==6.0.4
-packaging==23.1
+multidict==6.4.4
 prometheus-client==0.17.1
-requests==2.31.0
-typing_extensions==4.8.0
-urllib3>=2.0.7
-websocket-client==1.6.2
-werkzeug>=2.3.8
-yarl==1.9.2
-zipp==3.19.1
-pip==23.3
+propcache==0.3.1
+pydantic==2.11.5
+pydantic_core==2.33.2
+sniffio==1.3.1
+starlette==0.46.2
+typing-inspection==0.4.1
+typing_extensions==4.13.2
+urllib3==2.4.0
+uvicorn==0.30.0
+yarl==1.20.0
