--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,9 @@ multidict==6.4.4
 prometheus-client==0.17.1
 propcache==0.3.1
 pydantic==2.11.5
+pydantic-settings==2.9.1
 pydantic_core==2.33.2
+python-dotenv==1.1.0
 sniffio==1.3.1
 starlette==0.46.2
 typing-inspection==0.4.1
